--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>cloning</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat odit a aperiam fugit accusamus ut voluptas repudiandae quos animi ipsam ipsum eos, quas quisquam, quasi tenetur nobis ab, cumque possimus!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat odit a aperiam fugit accusamus ut voluptas repudiandae quos animi ipsam ipsum eos, quas quisquam, quasi tenetur nobis ab, cumque possimus! kasino</p>
 </body>
 </html>
