div insert malala kampor

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat odit a aperiam fugit accusamus ut voluptas repudiandae quos animi ipsam ipsum eos, quas quisquam, quasi tenetur nobis ab, cumque possimus! kasino</p>
+
+    <div>section of malala kampor</div>
 </body>
 </html>
